@@ -20,6 +20,7 @@ debsig-verify (0.9) UNRELEASED; urgency=low
   * Do not unnecessarily link against libxmltok, only libxmlparse.
   * Start using libdpkg instead of duplicating code:
     - Add pkg-config and libdpkg-dev to Build-Depends.
+    - Add a Built-Using field for libdpkg-dev static linking.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 11 May 2014 05:35:13 +0200
 
